# prompt-armor

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: prompt_armor.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  benchmarks.md
scripts/: benchmark.py
src/prompt_armor/: __init__.py  config.py  main.py  models.py
src/prompt_armor/detectors/: __init__.py  cloud.py  company.py  financial.py  injection.py  jailbreak.py  pii.py  secrets.py  toxic.py
src/prompt_armor/middleware/: __init__.py  allowlist.py  audit_logger.py  health.py  rate_limiter.py  stats.py
src/prompt_armor/proxy/: __init__.py  errors.py  router.py  streaming.py
tests/: conftest.py  test_api.py  test_detectors.py  test_new_detectors.py  test_v1_features.py
