[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-armor"
version = "0.1.0"
description = "Self-hosted LLM firewall proxy — prompt injection, PII, and jailbreak detection for any LLM API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Santhana Bharathi", email = "hello@santhanabharathi.com" }]
keywords = ["llm", "security", "prompt-injection", "pii", "ai-security", "firewall"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.0",
  "boto3>=1.35.0",
  "pyyaml>=6.0.2",
  "redis>=5.0.0",
  "slowapi>=0.1.9",
  "luhn>=0.2.0",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-httpx>=0.30.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "httpx>=0.27.0",
]

[project.scripts]
prompt-armor = "prompt_armor.main:start"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/prompt_armor --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
